--- a/components/scss/partials/_footer.scss
+++ b/components/scss/partials/_footer.scss
@@ -6,7 +6,7 @@
 
 .footer_flex_wrap {
     display: flex;
-    display: -webkit-flex;
+    // display: -webkit-flex;
     flex-direction: row-reverse;
     -webkit-flex-direction: row-reverse;
     flex-wrap: wrap;
